resolvendo erros nas demos

--- a/theme/templates/components/demos/table.html
+++ b/theme/templates/components/demos/table.html
@@ -74,7 +74,7 @@
     <div class="space-y-4">
         <h2 class="text-2xl font-semibold">Com Ações</h2>
         <div class="border border-border rounded-radius-lg p-6">
-            {% include "components/table.html" with headers=table_with_actions.headers data=table_with_actions.data hover=True %}
+            {% include "components/table.html" with headers=table_with_actions_headers data=table_with_actions_data hover=True %}
         </div>
     </div>
 
